# shp2metric

./: .gitignore  README.md  pyproject.toml  test.shp  test.shx
shp2metric/: main.py  shp2metric.py
