[tool.poetry]
name = "shp2metric"
version = "0.1.0"
description = "Converts Operations Center shapefiles to metric"
authors = ["João Fauvel <jmmfauvel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
